<resources>
    <string name="app_name">QRcode-quest</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_account">Account</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="qrshot_name_placeholder">QRShot Name</string>
    <string name="score_placeholder">Score</string>
    <string name="qrshot_list_points">Points</string>
    <string name="player_qrshot_code">Code</string>
    <string name="number_placeholder">#</string>
    <string name="player_qrlist_lowest">Lowest</string>
    <string name="player_qrlist_highest">Highest</string>
    <string name="player_qrlist_score">Score</string>
    <string name="player_qrlist_total">Total</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logging_in_message">Logging In…</string>
    <string name="login_or_text">or</string>
    <string name="register_button_label">Register</string>
    <string name="register_email_hint">email (optional)</string>
    <string name="register_username_hint">username</string>
    <string name="login_signup_prompt">Sign up</string>
    <string name="login_scan_button_label">Scan Login Code</string>
    <string name="qrview_name_placeholder">QR Code</string>
    <string name="delete_qrcode">Delete Capture</string>
    <string name="edit_label">Edit</string>
    <string name="qrview_score">Score:</string>
    <string name="qrview_geoloc">Geolocation:</string>
    <string name="qrview_scanned_header">Times captured:</string>
    <string name="view_players_label">View Players</string>
    <string name="qrview_times_capped_placeholder">#</string>
    <string name="view_comments_label">View Comments</string>
    <string name="qrview_image_description">QR Capture Photo</string>
    <string name="qrview_score_placeholder">#</string>
    <string name="qrview_geoloc_placeholder">#, #</string>
    <string name="scan_text">Scan</string>
    <string name="leaderboard_label">Leaderboard</string>
    <string name="players_score_header">Score</string>
    <string name="players_username_header">Username</string>
    <string name="my_rankings_header">My Rankings:</string>
    <string name="no_captures_yet">No captures yet :(</string>
    <string name="delete_player">Delete Player</string>
    <string name="comment_hint">write a comment...</string>
    <string name="post_label">post</string>
    <string name="qrcapture_label">QR Capture</string>
    <string name="comments_label">Comments</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="no_comments">No comments yet :(</string>
    <string name="contact_information_header">Contact Information</string>
    <string name="username_literal">Username</string>
    <string name="email_literal">Email</string>
    <string name="modify_literal">Modify</string>
    <string name="generate_profile_qr">Generate QR\nCode For Profile</string>
    <string name="generate_login_qr">Generate QR\nCode For Login</string>
</resources>
