<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.sign_up.SignUpFragment">

    <Button
        android:id="@+id/login_signup_scan_button"
        style="@style/button_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_scan_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_signup_divider_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/login_or_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_signup_scan_button" />

    <TextView
        android:id="@+id/login_signup_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_signup_prompt"
        android:layout_margin="10dp"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_signup_divider_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_signup_username_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_signup_prompt">

        <EditText
            android:id="@+id/login_signup_username"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/register_username_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/login_signup_prompt" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_signup_email_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintWidth_percent="66"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_signup_username_layout">

        <EditText
            android:id="@+id/login_signup_email"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/register_email_hint"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_signup_register_button"
        style="@style/button_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_signup_email_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>
